src/DlibDotNet.Native/dlib/matrix/matrix.h

DLLEXPORT int matrix_operator_subtract_dpoint(matrix_element_type type,
                                              void* lhs,
                                              dlib::dpoint* rhs,
                                              const int templateRows,
                                              const int templateColumns,
                                              void** ret)
{
    int err = ERR_OK;

    switch(type)
    {
        case matrix_element_type::Double:
            matrix_operator_subtract_right_vector_2_template(double, templateRows, templateColumns, err, lhs, double, rhs, ret);
            break;
        case matrix_element_type::UInt8:
        case matrix_element_type::UInt16:
        case matrix_element_type::UInt32:
        case matrix_element_type::UInt64:
        case matrix_element_type::Int8:
        case matrix_element_type::Int16:
        case matrix_element_type::Int32:
        case matrix_element_type::Int64:
        case matrix_element_type::Float:
        case matrix_element_type::RgbPixel:
        case matrix_element_type::HsiPixel:
        case matrix_element_type::RgbAlphaPixel:
        default:
            err = ERR_MATRIX_ELEMENT_TYPE_NOT_SUPPORT;
            break;
    }

    return err;
}
DLLEXPORT int matrix_operator_multiply(matrix_element_type type,
                                       void* lhs,
                                       void* rhs,
                                       const int leftTemplateRows,
                                       const int leftTemplateColumns,
                                       const int rightTemplateRows,
                                       const int rightTemplateColumns,
                                       void** ret)
{
    int err = ERR_OK;

    switch(type)
    {
        case matrix_element_type::UInt8:
            matrix_operator_multiply_template(uint8_t, lhs, leftTemplateRows, leftTemplateColumns, rhs, rightTemplateRows, rightTemplateColumns, ret);
            break;
        case matrix_element_type::UInt16:
            matrix_operator_multiply_template(uint16_t, lhs, leftTemplateRows, leftTemplateColumns, rhs, rightTemplateRows, rightTemplateColumns, ret);
            break;
        case matrix_element_type::UInt32:
            matrix_operator_multiply_template(uint32_t, lhs, leftTemplateRows, leftTemplateColumns, rhs, rightTemplateRows, rightTemplateColumns, ret);
            break;
        case matrix_element_type::UInt64:
            matrix_operator_multiply_template(uint64_t, lhs, leftTemplateRows, leftTemplateColumns, rhs, rightTemplateRows, rightTemplateColumns, ret);
            break;
        case matrix_element_type::Int8:
            matrix_operator_multiply_template(int8_t, lhs, leftTemplateRows, leftTemplateColumns, rhs, rightTemplateRows, rightTemplateColumns, ret);
            break;
        case matrix_element_type::Int16:
            matrix_operator_multiply_template(int16_t, lhs, leftTemplateRows, leftTemplateColumns, rhs, rightTemplateRows, rightTemplateColumns, ret);
            break;
        case matrix_element_type::Int32:
            matrix_operator_multiply_template(int32_t, lhs, leftTemplateRows, leftTemplateColumns, rhs, rightTemplateRows, rightTemplateColumns, ret);
            break;
        case matrix_element_type::Int64:
            matrix_operator_multiply_template(int64_t, lhs, leftTemplateRows, leftTemplateColumns, rhs, rightTemplateRows, rightTemplateColumns, ret);
            break;
        case matrix_element_type::Float:
            matrix_operator_multiply_template(float, lhs, leftTemplateRows, leftTemplateColumns, rhs, rightTemplateRows, rightTemplateColumns, ret);
            break;
        case matrix_element_type::Double:
            matrix_operator_multiply_template(double, lhs, leftTemplateRows, leftTemplateColumns, rhs, rightTemplateRows, rightTemplateColumns, ret);
            break;
        case matrix_element_type::RgbPixel:
        case matrix_element_type::HsiPixel:
        case matrix_element_type::RgbAlphaPixel:
        default:
            err = ERR_MATRIX_ELEMENT_TYPE_NOT_SUPPORT;
            break;
    }

    return err;
}
DLLEXPORT int matrix_operator_multiply_dpoint(matrix_element_type type,
                                              void* lhs,
                                              dlib::dpoint* rhs,
                                              const int templateRows,
                                              const int templateColumns,
                                              void** ret)
{
    int err = ERR_OK;

    switch(type)
    {
        case matrix_element_type::Double:
            matrix_operator_multiply_right_vector_2_template(double, templateRows, templateColumns, err, lhs, double, rhs, ret);
            break;
        case matrix_element_type::UInt8:
        case matrix_element_type::UInt16:
        case matrix_element_type::UInt32:
        case matrix_element_type::UInt64:
        case matrix_element_type::Int8:
        case matrix_element_type::Int16:
        case matrix_element_type::Int32:
        case matrix_element_type::Int64:
        case matrix_element_type::Float:
        case matrix_element_type::RgbPixel:
        case matrix_element_type::HsiPixel:
        case matrix_element_type::RgbAlphaPixel:
        default:
            err = ERR_MATRIX_ELEMENT_TYPE_NOT_SUPPORT;
            break;
    }

    return err;
}
DLLEXPORT int matrix_operator_multiply_left_numeric(::numeric_type numeric_type,
                                                    void* lhs,
                                                    matrix_element_type type,
                                                    void* rhs,
                                                    const int templateRows,
                                                    const int templateColumns,
                                                    void** ret)
{
    int err = ERR_OK;

    switch(numeric_type)
    {
        case ::numeric_type::UInt8:
            matrix_operator_multiply_left_numeric_template(uint8_t, templateRows, templateColumns, err, lhs, type, rhs, ret);
            break;
        case ::numeric_type::UInt16:
            matrix_operator_multiply_left_numeric_template(uint16_t, templateRows, templateColumns, err, lhs, type, rhs, ret);
            break;
        case ::numeric_type::UInt32:
            matrix_operator_multiply_left_numeric_template(uint32_t, templateRows, templateColumns, err, lhs, type, rhs, ret);
            break;
        case ::numeric_type::UInt64:
            matrix_operator_multiply_left_numeric_template(uint64_t, templateRows, templateColumns, err, lhs, type, rhs, ret);
            break;
        case ::numeric_type::Int8:
            matrix_operator_multiply_left_numeric_template(int8_t, templateRows, templateColumns, err, lhs, type, rhs, ret);
            break;
        case ::numeric_type::Int16:
            matrix_operator_multiply_left_numeric_template(int16_t, templateRows, templateColumns, err, lhs, type, rhs, ret);
            break;
        case ::numeric_type::Int32:
            matrix_operator_multiply_left_numeric_template(int32_t, templateRows, templateColumns, err, lhs, type, rhs, ret);
            break;
        case ::numeric_type::Int64:
            matrix_operator_multiply_left_numeric_template(int64_t, templateRows, templateColumns, err, lhs, type, rhs, ret);
            break;
        case ::numeric_type::Float:
            matrix_operator_multiply_left_numeric_template(float, templateRows, templateColumns, err, lhs, type, rhs, ret);
            break;
        case ::numeric_type::Double:
            matrix_operator_multiply_left_numeric_template(double, templateRows, templateColumns, err, lhs, type, rhs, ret);
            break;
        default:
            err = ERR_MATRIX_ELEMENT_TYPE_NOT_SUPPORT;
            break;
    }

    return err;
}
DLLEXPORT int matrix_operator_multiply_right_numeric(matrix_element_type type,
                                                     void* lhs,
                                                     const int templateRows,
                                                     const int templateColumns,
                                                     ::numeric_type numeric_type,
                                                     void* rhs,
                                                     void** ret)
{
    int err = ERR_OK;

    switch(type)
    {
        case matrix_element_type::UInt8:
            matrix_operator_multiply_right_numeric_template(uint8_t, templateRows, templateColumns, err, lhs, numeric_type, rhs, ret);
            break;
        case matrix_element_type::UInt16:
            matrix_operator_multiply_right_numeric_template(uint16_t, templateRows, templateColumns, err, lhs, numeric_type, rhs, ret);
            break;
        case matrix_element_type::UInt32:
            matrix_operator_multiply_right_numeric_template(uint32_t, templateRows, templateColumns, err, lhs, numeric_type, rhs, ret);
            break;
        case matrix_element_type::UInt64:
            matrix_operator_multiply_right_numeric_template(uint64_t, templateRows, templateColumns, err, lhs, numeric_type, rhs, ret);
            break;
        case matrix_element_type::Int8:
            matrix_operator_multiply_right_numeric_template(int8_t, templateRows, templateColumns, err, lhs, numeric_type, rhs, ret);
            break;
        case matrix_element_type::Int16:
            matrix_operator_multiply_right_numeric_template(int16_t, templateRows, templateColumns, err, lhs, numeric_type, rhs, ret);
            break;
        case matrix_element_type::Int32:
            matrix_operator_multiply_right_numeric_template(int32_t, templateRows, templateColumns, err, lhs, numeric_type, rhs, ret);
            break;
        case matrix_element_type::Int64:
            matrix_operator_multiply_right_numeric_template(int64_t, templateRows, templateColumns, err, lhs, numeric_type, rhs, ret);
            break;
        case matrix_element_type::Float:
            matrix_operator_multiply_right_numeric_template(float, templateRows, templateColumns, err, lhs, numeric_type, rhs, ret);
            break;
        case matrix_element_type::Double:
            matrix_operator_multiply_right_numeric_template(double, templateRows, templateColumns, err, lhs, numeric_type, rhs, ret);
            break;
        case matrix_element_type::RgbPixel:
        case matrix_element_type::HsiPixel:
        case matrix_element_type::RgbAlphaPixel:
        default:
            err = ERR_MATRIX_ELEMENT_TYPE_NOT_SUPPORT;
            break;
    }

    return err;
}
DLLEXPORT int matrix_operator_divide(matrix_element_type type,
                                     void* lhs,
                                     void* rhs,
                                     const int leftTemplateRows,
                                     const int leftTemplateColumns,
                                     const int rightTemplateRows,
                                     const int rightTemplateColumns,
                                     void** ret)
{
    int err = ERR_OK;

    switch(type)
    {
        case matrix_element_type::UInt8:
            matrix_operator_divide_template(uint8_t, lhs, leftTemplateRows, leftTemplateColumns, rhs, rightTemplateRows, rightTemplateColumns, ret);
            break;
        case matrix_element_type::UInt16:
            matrix_operator_divide_template(uint16_t, lhs, leftTemplateRows, leftTemplateColumns, rhs, rightTemplateRows, rightTemplateColumns, ret);
            break;
        case matrix_element_type::UInt32:
            matrix_operator_divide_template(uint32_t, lhs, leftTemplateRows, leftTemplateColumns, rhs, rightTemplateRows, rightTemplateColumns, ret);
            break;
        case matrix_element_type::UInt64:
            matrix_operator_divide_template(uint64_t, lhs, leftTemplateRows, leftTemplateColumns, rhs, rightTemplateRows, rightTemplateColumns, ret);
            break;
        case matrix_element_type::Int8:
            matrix_operator_divide_template(int8_t, lhs, leftTemplateRows, leftTemplateColumns, rhs, rightTemplateRows, rightTemplateColumns, ret);
            break;
        case matrix_element_type::Int16:
            matrix_operator_divide_template(int16_t, lhs, leftTemplateRows, leftTemplateColumns, rhs, rightTemplateRows, rightTemplateColumns, ret);
            break;
        case matrix_element_type::Int32:
            matrix_operator_divide_template(int32_t, lhs, leftTemplateRows, leftTemplateColumns, rhs, rightTemplateRows, rightTemplateColumns, ret);
            break;
        case matrix_element_type::Int64:
            matrix_operator_divide_template(int64_t, lhs, leftTemplateRows, leftTemplateColumns, rhs, rightTemplateRows, rightTemplateColumns, ret);
            break;
        case matrix_element_type::Float:
            matrix_operator_divide_template(float, lhs, leftTemplateRows, leftTemplateColumns, rhs, rightTemplateRows, rightTemplateColumns, ret);
            break;
        case matrix_element_type::Double:
            matrix_operator_divide_template(double, lhs, leftTemplateRows, leftTemplateColumns, rhs, rightTemplateRows, rightTemplateColumns, ret);
            break;
        case matrix_element_type::RgbPixel:
        case matrix_element_type::HsiPixel:
        case matrix_element_type::RgbAlphaPixel:
        default:
            err = ERR_MATRIX_ELEMENT_TYPE_NOT_SUPPORT;
            break;
    }

    return err;
}
DLLEXPORT int matrix_operator_divide_double(matrix_element_type type,
                                            void* lhs,
                                            double rhs,
                                            const int leftTemplateRows,
                                            const int leftTemplateColumns,
                                            void** ret)
{
    int err = ERR_OK;

    switch(type)
    {
        case matrix_element_type::UInt8:
            matrix_operator_primitive_template(uint8_t, /=, lhs, leftTemplateRows, leftTemplateColumns, rhs, ret);
            break;
        case matrix_element_type::UInt16:
            matrix_operator_primitive_template(uint16_t, /=, lhs, leftTemplateRows, leftTemplateColumns, rhs, ret);
            break;
        case matrix_element_type::UInt32:
            matrix_operator_primitive_template(uint32_t, /=, lhs, leftTemplateRows, leftTemplateColumns, rhs, ret);
            break;
        case matrix_element_type::UInt64:
            matrix_operator_primitive_template(uint64_t, /=, lhs, leftTemplateRows, leftTemplateColumns, rhs, ret);
            break;
        case matrix_element_type::Int8:
            matrix_operator_primitive_template(int8_t, /=, lhs, leftTemplateRows, leftTemplateColumns, rhs, ret);
            break;
        case matrix_element_type::Int16:
            matrix_operator_primitive_template(int16_t, /=, lhs, leftTemplateRows, leftTemplateColumns, rhs, ret);
            break;
        case matrix_element_type::Int32:
            matrix_operator_primitive_template(int32_t, /=, lhs, leftTemplateRows, leftTemplateColumns, rhs, ret);
            break;
        case matrix_element_type::Int64:
            matrix_operator_primitive_template(int64_t, /=, lhs, leftTemplateRows, leftTemplateColumns, rhs, ret);
            break;
        case matrix_element_type::Float:
            matrix_operator_primitive_template(float, /=, lhs, leftTemplateRows, leftTemplateColumns, rhs, ret);
            break;
        case matrix_element_type::Double:
            matrix_operator_primitive_template(double, /=, lhs, leftTemplateRows, leftTemplateColumns, rhs, ret);
            break;
        case matrix_element_type::RgbPixel:
        case matrix_element_type::HsiPixel:
        case matrix_element_type::RgbAlphaPixel:
        default:
            err = ERR_MATRIX_ELEMENT_TYPE_NOT_SUPPORT;
            break;
    }

    return err;
}