src/DlibDotNet/PInvoke/Matrix/Matrix.cs


        [DllImport(NativeLibrary, CallingConvention = CallingConvention)]
        public static extern ErrorType matrix_operator_subtract_dpoint(MatrixElementType matrixElementType,
                                                                       IntPtr lhs,
                                                                       IntPtr rhs,
                                                                       int templateRows,
                                                                       int templateColumns,
                                                                       out IntPtr ret);

        [DllImport(NativeLibrary, CallingConvention = CallingConvention)]
        public static extern ErrorType matrix_operator_multiply(MatrixElementType matrixElementType,
                                                                IntPtr lhs,
                                                                IntPtr rhs,
                                                                int leftTemplateRows,
                                                                int leftTemplateColumns,
                                                                int rightTemplateRows,
                                                                int rightTemplateColumns,
                                                                out IntPtr ret);

        [DllImport(NativeLibrary, CallingConvention = CallingConvention)]
        public static extern ErrorType matrix_operator_multiply_dpoint(MatrixElementType matrixElementType,
                                                                       IntPtr lhs,
                                                                       IntPtr rhs,
                                                                       int templateRows,
                                                                       int templateColumns,
                                                                       out IntPtr ret);

        [DllImport(NativeLibrary, CallingConvention = CallingConvention)]
        public static extern ErrorType matrix_operator_multiply_left_numeric(NumericType numericType,
                                                                             IntPtr lhs,
                                                                             MatrixElementType type,
                                                                             IntPtr rhs,
                                                                             int templateRows,
                                                                             int templateColumns,
                                                                             out IntPtr ret);

        [DllImport(NativeLibrary, CallingConvention = CallingConvention)]
        public static extern ErrorType matrix_operator_multiply_right_numeric(MatrixElementType type,
                                                                              IntPtr lhs,
                                                                              int templateRows,
                                                                              int templateColumns,
                                                                              NumericType numericType,
                                                                              IntPtr rhs,
                                                                              out IntPtr ret);

        [DllImport(NativeLibrary, CallingConvention = CallingConvention)]
        public static extern ErrorType matrix_operator_divide(MatrixElementType matrixElementType,
                                                              IntPtr lhs,
                                                              IntPtr rhs,
                                                              int leftTemplateRows,
                                                              int leftTemplateColumns,
                                                              int rightTemplateRows,
                                                              int rightTemplateColumns,
                                                              out IntPtr ret);

        [DllImport(NativeLibrary, CallingConvention = CallingConvention)]
        public static extern ErrorType matrix_operator_divide_double(MatrixElementType matrixElementType,
                                                                     IntPtr lhs,
                                                                     double rhs,
                                                                     int leftTemplateRows,
                                                                     int leftTemplateColumns,
                                                                     out IntPtr ret);

        #endregion

    }

}